@startuml shared-network-remote
title Shared — Remote RMI Interfaces & JSON Handler (org.adsl.shared.network)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "java.rmi" <<JDK>> {
  interface Remote
}

package "shared.network.remote" {

  interface RemoteClientStub <<RMI>> {
    +sendResponse(response: ServerResponse): void
  }
  note right of RemoteClientStub
    RMI callback held by the server to push
    responses to the client without polling.
  end note

  interface RemoteServerService <<RMI>> {
    +connect(clientStub: RemoteClientStub): void
    +sendRequest(request: ClientRequest, clientStub: RemoteClientStub): void
    +disconnect(clientStub: RemoteClientStub): void
  }
  note right of RemoteServerService
    Bound in the RMI registry under name
    "GameServer". Lookup target for clients.
  end note
}

package "shared.network" {
  class JsonMessageHandler <<utility>> {
    {static} -mapper: ObjectMapper
    {static} +deserializeClientRequest(jsonMessage: String): ClientRequest
    {static} +deserializeServerResponse(jsonMessage: String): ServerResponse
    {static} +serializeClientRequest(request: ClientRequest): String
    {static} +serializeServerResponse(response: ServerResponse): String
  }
  note right of JsonMessageHandler
    Stateless, thread-safe wrapper around a
    shared Jackson ObjectMapper. Used by both
    Socket peers for wire (de)serialisation.
  end note
}

RemoteClientStub -up-|> Remote
RemoteServerService -up-|> Remote

RemoteClientStub ..> "shared.network.responses.ServerResponse"
RemoteServerService ..> "shared.network.requests.ClientRequest"
JsonMessageHandler ..> "shared.network.requests.ClientRequest"
JsonMessageHandler ..> "shared.network.responses.ServerResponse"

@enduml
